cleaned up pointless and duplicate files and folders, updated readme with features section, relocated JARs to main project directory